# OpenGL_Learning

./: .gitmodules  CMakeLists.txt  README.md
Glitter/: CMakeLists.txt
Glitter/Headers/: camera.hpp  glitter.hpp  shader.hpp
Glitter/Shaders/: basic.frag  basic.vert  color.frag  color.vert  colorful.frag  colorful.vert  coordinateSystems.frag  coordinateSystems.vert  shader.frag  texture.frag  texture.vert  texture_with_trans.vert  transColorful.vert
Glitter/Sources/: main.cpp  mesh.cpp  shader.cpp
SubProjects/: CMakeLists.txt
SubProjects/Blank/: CMakeLists.txt
SubProjects/Blank/Sources/: main.cpp
SubProjects/CameraSystems/: CMakeLists.txt
SubProjects/CameraSystems/Sources/: main.cpp
SubProjects/CoordinateSystems/: CMakeLists.txt
SubProjects/CoordinateSystems/Sources/: main.cpp
SubProjects/DrawRectangle/: CMakeLists.txt
SubProjects/DrawRectangle/Sources/: main.cpp
SubProjects/DrawTexture/: CMakeLists.txt
SubProjects/DrawTexture/Sources/: main.cpp
SubProjects/DrawTriangle/: CMakeLists.txt
SubProjects/DrawTriangle/Shaders/: shader.vert
SubProjects/DrawTriangle/Sources/: main.cpp
SubProjects/SetUniformColor/: CMakeLists.txt
SubProjects/SetUniformColor/Sources/: main.cpp
SubProjects/SetVertexColor/: CMakeLists.txt
SubProjects/SetVertexColor/Sources/: main.cpp
SubProjects/Template/: CMakeLists.txt
SubProjects/Template/Headers/: template.hpp
SubProjects/Template/Sources/: main.cpp
SubProjects/TransColorful/: CMakeLists.txt
SubProjects/TransColorful/Sources/: main.cpp
SubProjects/Transformations/: CMakeLists.txt
SubProjects/Transformations/Headers/: header.hpp
SubProjects/Transformations/Sources/: main.cpp
